--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="39dp"
         android:layout_gravity="center"
-        android:layout_margin="70dp"
         android:layout_marginTop="70dp"
         android:text="판매 정보"
         android:textColor="#000000"
@@ -25,21 +24,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_margin="10dp"
         tools:context=".Information">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="  게시글 제목: "
+            android:layout_weight="1"
+            android:text="게시글 제목: "
             android:textColor="#000000"
-            android:textSize="25sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp"
-            android:layout_margin="5dp"/>
+            android:textSize="18sp" />
 
-
+        <TextView
+            android:id="@+id/textView_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -49,31 +52,20 @@
         android:orientation="horizontal"
         tools:context=".Information"
         android:layout_margin="10dp">
-
         <TextView
             android:id="@+id/textViewadd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="  주소 : "
+            android:layout_weight="1"
+            android:text="주소 : "
             android:textColor="#000000"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp" />
-
-
+            android:textSize="18sp" />
         <TextView
-            android:id="@+id/inputadd"
+            android:id="@+id/textView_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp" />
-
-
+            android:layout_weight="4"
+            android:textSize="18sp" />
     </LinearLayout>
 
 
@@ -88,41 +80,32 @@
             android:id="@+id/textViewcr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="  작물 입력 : "
+            android:layout_weight="1"
+            android:text="판매 농작물: "
             android:textColor="#000000"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp" />
+            android:textSize="18sp" />
         <TextView
-            android:id="@+id/inputcr"
+            android:id="@+id/textView_crop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp" />
-
+            android:textSize="18sp"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         tools:context=".Information"
         android:layout_margin="10dp">
-
         <TextView
             android:id="@+id/textViewty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:text="  개인 / 소상공인 : "
             android:textColor="#000000"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp" />
+            android:textSize="18sp" />
         <TextView
             android:id="@+id/inputty"
             android:layout_width="wrap_content"
@@ -130,13 +113,11 @@
             android:layout_weight="3"
             android:text=""
             android:textColor="#000000"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="123dp"
-            tools:layout_editor_absoluteY="195dp" />
-
+            android:textSize="18sp"/>
     </LinearLayout>
+
     <TextView
-        android:id="@+id/inputinfo"
+        android:id="@+id/textView_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2.5"
@@ -153,7 +134,6 @@
         android:background="#189BA3"
         android:onClick="btnOkay"
         android:text="확인" />
-
 
 
 </LinearLayout>
