--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -22,7 +22,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:orientation="horizontal"
         android:layout_margin="10dp"
         tools:context=".Information">
@@ -32,15 +32,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="게시글 제목: "
+            android:text="제목: "
             android:textColor="#000000"
             android:textSize="18sp" />
 
-        <TextView
+        <ListView
             android:id="@+id/textView_title"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:textColor="#000000"
             android:textSize="18sp" />
 
@@ -116,14 +116,13 @@
             android:textSize="18sp"/>
     </LinearLayout>
 
-    <TextView
+
+    <ListView
         android:id="@+id/textView_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2.5"
-        android:text=""
-        android:background="#FFFAE7"
-        android:inputType="text"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:layout_margin="20dp"/>
 
@@ -134,6 +133,12 @@
         android:background="#189BA3"
         android:onClick="btnOkay"
         android:text="확인" />
+
+    <Button
+        android:id="@+id/button_main_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 
 
 </LinearLayout>
