--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Seller"
+
     >
 
     <TextView
@@ -123,6 +123,35 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:context=".seller">
+
+        <TextView
+            android:id="@+id/textViewtp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:text="  비밀번호"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            tools:layout_editor_absoluteX="123dp"
+            tools:layout_editor_absoluteY="195dp" />
+
+
+        <EditText
+            android:id="@+id/pw"
+            android:layout_width="198dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:hint=" 비밀번호 4자리를 입력하세요"
+            android:inputType="text"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -175,4 +204,3 @@
         android:text="TextView" />
 
 </LinearLayout>
-
